--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,24 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CLIENT_ID</key>
-	<string>916585077869-qute97ijfpr3lir1fvm8qh20e4htmct6.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.916585077869-qute97ijfpr3lir1fvm8qh20e4htmct6</string>
-	<key>ANDROID_CLIENT_ID</key>
-	<string>916585077869-1f29apfobm0kq14sh4s93c4ocqkkbl33.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDFCByN7mPioN5JR-cr_nLYbI8sq8WAwyI</string>
+	<string>AIzaSyCvT3i75t5ea8wl73hKoq5CDD_lqEi_YbE</string>
 	<key>GCM_SENDER_ID</key>
-	<string>916585077869</string>
+	<string>962724192471</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.example.perfAndroid</string>
 	<key>PROJECT_ID</key>
-	<string>happyhoursmarketdev</string>
+	<string>hhmtestperf-18d27</string>
 	<key>STORAGE_BUCKET</key>
-	<string>happyhoursmarketdev.appspot.com</string>
+	<string>hhmtestperf-18d27.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -31,8 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:916585077869:ios:902dfceaf971a289423364</string>
-	<key>DATABASE_URL</key>
-	<string>https://happyhoursmarketdev-default-rtdb.europe-west1.firebasedatabase.app</string>
+	<string>1:962724192471:ios:1e3731ac0091585614d092</string>
 </dict>
 </plist>
